--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
     "genkit": "^1.8.0",
+    "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
